[package]
name = "pubkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
ethers = { version = "1.0", default-features = false }
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "std",
] }
generic-array = { version = "0.14", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
tiny-keccak = { version = "2.0", default-features = false }
eyre = "0.6"
hex = "0.4"
